<resources>
    <string name="app_name">coffee-shop</string>
    <string name="coffee_shop">Coffee \nShop</string>
    <string name="saied_rahimi">Saied Rahimi</string>
    <string name="search_anything">Search anything</string>
    <string name="todo">TODO</string>
    <string name="see_all">See all</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="_0">$0</string>
    <string name="subtitle">subtitle</string>
    <string name="textview">TextView</string>
    <string name="explorer">Explorer</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="my_order">My Order</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="back">Back</string>
</resources>